글로벌 OTT 서비스 소스코드/virginia/envrionment/manifests/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virginia-frontend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: virginia-frontend
  template:
    metadata:
      labels:
        app: virginia-frontend
    spec:
      containers:
        - name: virginia-frontend
          image: 214813472555.dkr.ecr.us-east-1.amazonaws.com/virginia-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
